<resources>
    <string name="app_name">Kodachi</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="kakutei">確定</string>
    <string name="setting_notify_birthday">バースデイ通知</string>
    <string name="monthly">月ごとに通知する</string>
    <string name="yearly">年ごとに通知する</string>
    <string name="setting_notify_chiebag">知恵袋通知</string>
    <string name="getting_answer_notify">質問へ回答が来たとき</string>

    <string-array name="pic_notify_timing">
        <item>選択…</item>
        <item>しない</item>
        <item>日ごと</item>
        <item>週ごと</item>
    </string-array>

    <string-array name="prof_year">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

    <string-array name="month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="birthdate">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>
    <string name="getting_good_notify">回答へgoodが来たとき</string>
    <string name="setting_notify_picture">写真通知</string>
    <string name="picNotify">現在の設定:しない</string>
    <string name="debug">テスト用です。</string>
    <string name="backbutton">戻る</string>
    <string name="debugbutton">虫退治</string>
    <string name="Settings">設定</string>
    <string name="home_comment">ここにはコメントが入るよ！改行とかに対応できるといいな！</string>
    <string name="child_name">楓くん</string>
    <string name="plusbutton">写真を撮る</string>
    <string name="viewerbutton">ビューアへ移行すｒ</string>
    <string name="chiebagbutton">知恵袋へ移行する</string>
    <string name="profilesetting">プロフィール設定</string>
    <string name="settingnotify">通知設定</string>
    <string name="homesetting">home設定</string>
    <string name="babyprof">赤ちゃんのプロフィール</string>
    <string name="namesetting">名前：</string>
    <string name="baby_name">楓</string>
    <string name="birthdayname">バースデイ：</string>
    <string name="babysex">性別：</string>
    <string name="girl">女の子</string>
    <string name="boy">男の子</string>
    <string name="kun_san">さん</string>
    <string name="called">呼び名：</string>
    <string name="kun">くん</string>
    <string name="chan">ちゃん</string>
    <string name="other">その他</string>
    <string name="input">入力</string>
    <string name="homePicSetting">home設定</string>
    <string name="picBotton">・・・</string>
    <string name="picRadio1">お気に入りからランダム</string>
    <string name="picRadio２">すべての写真からランダム</string>
    <string name="picRadio３">選択する</string>
    <string name="notifysetting" >通知設定</string>
</resources>
