<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csmashikor.sacrifice.SettingHomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/homeSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/homesetting"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/picRadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        tools:text="@string/homesetting" />

    <TextView
        android:id="@+id/homePicSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/homePicSetting"
        app:layout_constraintBottom_toTopOf="@+id/picRadioGroup"
        app:layout_constraintEnd_toStartOf="@+id/picRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/picRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/homeSetting"
        tools:text="@string/homePicSetting" />

    <RadioGroup
        android:id="@+id/picRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <RadioButton
            android:id="@+id/picRadio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picRadio1"
            tools:text="@string/picRadio1" />

        <RadioButton
            android:id="@+id/picRadio２"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picRadio２"
            tools:text="@string/picRadio２" />

        <RadioButton
            android:id="@+id/picRadio３"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picRadio３"
            tools:text="@string/picRadio３" />

    </RadioGroup>

    <Button
        android:id="@+id/picBotton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/picBotton"
        app:layout_constraintEnd_toEndOf="@+id/picRadioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/picRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/picRadioGroup" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="151dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/picRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/picRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/picRadioGroup"
        app:srcCompat="@drawable/sysetm_pic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onBackButtonTapped"
        android:text="@string/backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/backbutton" />

</android.support.constraint.ConstraintLayout>

